# CISS-db-tools

./: .coverage  .gitignore  MIGRATION_COMPLETE.md  README.md  check_synonyms.sh  environment.yml  generate_report_v3.py  pyproject.toml  requirements.txt  test_imports.py
archive/: README.md
archive/scripts_old/data_processing/: parse_counts.py  parse_counts_db.py  parse_gbif.py
archive/scripts_old/database/: low_count_species_query.sql  query_low_count_species.py  query_unified_db.py
archive/scripts_old/directories/: extract_directories.sh
archive/scripts_old/images/: batch_download_images.py  batch_generate_embeddings.py  batch_get_species_urls.py  cnn_similarity.py  deduplicate_images.py  detect_outliers.py  species_pipeline.py
archive/scripts_old/reports/: generate_report_v3.py
archive/scripts_old/synonyms/: check_synonyms.sh  find_synonyms_gbif.py
counts/: CLEANED+CHECKED_image_counts.csv  CLEANED+UNCHECKED_image_counts.csv  ORIGINAL_image_counts.csv
docs/: COUNTS_PARSER.md  DATABASE_GUIDE.md  EXTRACT_DIRECTORIES.md  GBIF_GUIDE.md  LOW_COUNT_SPECIES.md  MIGRATION_GUIDE.md  installation.md  quickstart.md
scripts/data_processing/: parse_gbif_db.py
scripts/database/: query_counts.py  query_gbif.py
scripts/images/: FAISS_FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_STATUS.md  QUICKSTART.md  REFACTORING_SUMMARY.md  WALKTHROUGH.md  cnn_similarity.py  deduplicate_images.py  download_image.py  get_species_urls.py  review_duplicates.py  review_duplicates_v2.py  test_refactored.py
scripts/images/review_app/: ARCHITECTURE.md  README.md  __init__.py
scripts/images/review_app/core/: __init__.py  api.py  detection.py  storage.py
scripts/images/review_app/server/: __init__.py  handlers.py  html_template.py
scripts/images/review_app_v3/: __init__.py  config.py  main.py
scripts/images/review_app_v3/api/: __init__.py  deps.py
scripts/images/review_app_v3/api/routes/: __init__.py  analysis.py  dashboard.py  deletion.py  images.py
scripts/images/review_app_v3/frontend/: index.html  package-lock.json  package.json  tailwind.config.js
scripts/images/review_app_v3/models/: __init__.py  analysis.py  deletion.py  parameters.py  species.py
scripts/images/review_app_v3/services/: __init__.py  deletion_queue.py  detection_service.py  outlier_service.py
scripts/images/review_app_v3/tests/: __init__.py  conftest.py  test_api.py  test_services.py
scripts/images/tests/: __init__.py  conftest.py  test_cnn_all_species.py  test_core_modules.py  test_deletion.py  test_deletion_integration.py  test_faiss_loading.py  test_ui_manual.md
scripts/images/utils/: __init__.py  image_utils.py  union_find.py
scripts/reports/: test_gbif.py
scripts/synonyms/: find_synonyms.py
src/: README_DB.md  batch_download_images.py  batch_get_species_urls.py  download_image.py  find_synonyms_gbif.py  get_species_urls.py  parse_counts.py  parse_counts_db.py  parse_gbif_db.py  query_counts.py  query_gbif.py  query_low_count_species.py  query_unified_db.py  test_gbif.py
src/docs/: README_LOW_COUNT_QUERY.md
src/plantnet/: __init__.py
src/plantnet/cli/: __init__.py  analysis_cmds.py  database_cmds.py  image_cmds.py  main.py
src/plantnet/core/: __init__.py  gbif_parser.py
src/plantnet/images/: __init__.py  deduplication.py  similarity.py
src/plantnet/utils/: paths.py
src/plantnet/web/: __init__.py  review_app.py
tests/: __init__.py  conftest.py  test_imports.py  test_ui_response_format.py
tests/test_core/: test_gbif_parser.py
tests/test_images/: test_deduplication.py  test_similarity.py
workflows/: README.md
workflows/batch/: batch_download.py  batch_embeddings.py
(+17 files in other folders)
