[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plantnet"
version = "1.0.0"
description = "Plant species image mining and analysis toolkit for GBIF PlantNet data"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = {text = "MIT"}
authors = [
    {name = "Tynan Matthews", email = "tynan@matthews.solutions"}
]
keywords = ["biodiversity", "plant", "image-processing", "machine-learning", "gbif"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Recognition",
]

# Dependencies are managed by conda, but specify for completeness
dependencies = [
    "numpy>=1.24.0,<2.0.0",
    "pandas>=2.0.0",
    "pillow>=10.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "imagehash>=4.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "faiss-cpu>=1.7.4",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "umap-learn>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/plantnet"
Repository = "https://github.com/yourusername/plantnet"

[project.scripts]
# Main CLI entry point
plantnet = "plantnet.cli.main:main"

# Database commands
plantnet-db-query = "plantnet.cli.database_cmds:query_cli"
plantnet-db-build = "plantnet.cli.database_cmds:build_cli"

# Image commands
plantnet-download = "plantnet.cli.image_cmds:download_cli"
plantnet-deduplicate = "plantnet.cli.image_cmds:deduplicate_cli"
plantnet-embeddings = "plantnet.cli.image_cmds:embeddings_cli"

# Analysis commands
plantnet-analyze = "plantnet.cli.analysis_cmds:analyze_cli"
plantnet-review = "plantnet.web.review_app:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["plantnet*"]
namespaces = false

[tool.setuptools.package-data]
plantnet = [
    "web/templates/*.html",
    "web/static/*.css",
    "web/static/*.js",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = true  # For packages without stubs

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --cov=plantnet --cov-report=term-missing"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["src/plantnet"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
